adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum perferendis harum numquam ratione nisi dicta autem dolores at vitae aut mollitia nostrum nulla asperiores, dignissimos possimus sit quasi qui quos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo quibusdam a perferendis tempore doloribus assumenda eius vel soluta distinctio ex nisi, reprehenderit laboriosam? Blanditiis, minima ipsum necessitatibus eum unde expedita.</p>
 </body>
 </html>
